Issue #71, #140, #172 (#180)
* issue #140: Support gradle test fixtures
* issue #71: Consider transitive dependencies when resolving TestEngine
* issue #172: TestNG has the wrong module name for versions 7.0.0 and above